Fixed overflow hidden problem with dropdown

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -309,6 +309,9 @@ a:visited {
   margin-right: 20%;
   margin-top: 1em;
   margin-bottom: 1em;
+}
+
+.overflowHid {
   overflow: hidden;
 }
 
